# Malkhana

./: .gitignore  LICENSE  README.md  SECURITY.md  compliance-report.md  contributing.md  eslint.config.js  generate_pdfs.py  generate_pitch_deck.py  hardware-faq.md  index.html  original_prompt.txt  package-lock.json  package.json  scratch_slots_debug.txt  session-custody.md  skills_reference.txt  tailwind.config.js  triple-hash.md  vite.config.js
_reference/: 33aComp.md  33bLang.md  BSA_Section_63_Certificate_Text.md  Foundation.md  PRD-v6.md  PRD-v6.md.bak  PRD.md
collateral/: pitch-deck.pptx  product-brief.md
docs/: evaluation.md  index.html
src/: App.css  App.jsx  i18n.js  index.css
src-tauri/: Cargo.toml  build_err.txt  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs
src-tauri/src/commands/: archive_commands.rs  audit_commands.rs  case_commands.rs  certificate_commands.rs  custody_commands.rs  disposition_commands.rs  evidence_commands.rs  mod.rs  search_commands.rs  session_commands.rs  settings_commands.rs  signing_commands.rs  user_commands.rs
src-tauri/src/core/: certificate_engine.rs  device_detector.rs  hash_engine.rs  imaging_engine.rs  integrity_checker.rs  merkle_tree.rs  mod.rs  time_authority.rs  vault_manager.rs
src-tauri/src/data/: database.rs  mod.rs  models.rs  repository.rs  schema.rs
src-tauri/src/security/: key_derivation.rs  mod.rs  password.rs  signing.rs
src-tauri/src/utils/: errors.rs  mod.rs
src-tauri/tests/: hash_engine_test.rs  merkle_tree_test.rs
(+22 files in other folders)
