[package]
name = "malkhana-vault"
version = "0.1.0"
description = "Forensic Evidence Management System — BSA Section 63 Compliant"
authors = ["Chandransh Gupta"]
license = "PROPRIETARY"
repository = "https://github.com/chandranshgupta/Design-PRD-Malkhanavalut"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.1" }

[dependencies]
# --- Tauri Core ---
tauri = { version = "2.11.1", features = [] }
tauri-plugin-log = "2"
tauri-plugin-fs = "2"
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
tauri-plugin-notification = "2"
tauri-plugin-process = "2"
tauri-plugin-store = "2"

# --- Serialization ---
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# --- Cryptography & Hashing ---
sha2 = "0.10"
md-5 = "0.10"

# --- Database ---
rusqlite = { version = "0.33", features = ["bundled-sqlcipher"] }

# --- Utilities ---
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
log = "0.4"
thiserror = "2"
